java-21 refactor